Fixed modal stretching

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -71,12 +71,12 @@
 
 .modal__form {
   display: grid;
-  row-gap: 28px;
   font-family: Inter, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 16.94px;
   text-align: left;
+  max-width: 360px;
 }
 
 .modal__heading {
@@ -104,7 +104,7 @@
 .modal__save_button {
   background-color: #000000;
   color: #ffffff;
-  margin-top: 23px;
+  margin-top: 35px;
   width: 360px;
   height: 50px;
   cursor: pointer;
@@ -115,12 +115,20 @@
   color: rgb(84 84 84 / 0.2);
 }
 
+.modal__input-container {
+  position: relative;
+  margin-bottom: 20px;
+}
+
 .modal__error {
   color: red;
-  font-size: 12px;
-  max-width: 200px;
-  max-height: 15px;
-  overflow-y: auto;
+  height: 1.5em;
+  visibility: hidden;
+  line-height: 1.5em;
+}
+
+.modal__error_visible {
+  visibility: visible;
 }
 
 @media screen and (min-width: 320px) and (max-width: 630px) {
